# naertur

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  wrangler.jsonc
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_drop_quality_score.py  0003_drop_county_default.py  0004_create_places.py
app/: __init__.py  cli.py  main.py  schemas.py
app/core/: config.py
app/db/: models.py  session.py
app/services/: geo.py  hikes.py  met.py  morotur.py  normalization.py  nve.py  places.py  randomizer.py  safety.py  search.py  ssr.py
design_handoff_naertur_frontend/: Naertur.html  README.md
design_handoff_naertur_frontend 2/: Naertur-standalone.html  Naertur.html  README.md  data.js  icons.jsx
design_handoff_naertur_frontend 3/: Naertur-standalone.html  Naertur.html  README.md  app-trail.jsx  app.jsx
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  DevVariantSwitcher.tsx  config.ts  format.tsx  i18n.ts  maps.ts  reasons.ts  store.ts  styles.css  types.ts
frontend/tests/: api-client.test.ts  config.test.ts  place-picker.test.tsx  places-api.test.ts  (+3 more)
tests/: conftest.py  db.py  test_admin_auth.py  test_elevation_scraper.py  test_morotur_importer.py  test_normalization.py  test_nve.py  test_places_route.py  test_randomizer.py  test_safety.py  test_search_route_safety.py  test_ssr_importer.py
wiki/: log.md  morotur-permission-email.md  naertur.md
(+47 files in other folders)
