[project]
name = "naertur-backend"
version = "0.1.0"
description = "FastAPI + PostGIS backend for NærTur"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "geoalchemy2>=0.17.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
